fix map spacing and pass on all data attributes

--- a/styles/index.css
+++ b/styles/index.css
@@ -36,7 +36,7 @@
   .map-container {
   }
   .map-container > div {
-    @apply h-full pb-16;
+    @apply h-full;
   }
 
   /*** POSTS ***/
